# pulsecart

./: .gitignore  DEMO.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: product_catalog.json  ranker.joblib
artifacts/lambda-build/lib/: libgomp.so.1
artifacts/lambda-build/numpy-2.2.6.dist-info/: RECORD
artifacts/lambda-build/pulsecart/: schemas.py  tracing.py
artifacts/lambda-build/python_dotenv-1.2.2.dist-info/: RECORD
artifacts/lambda-build/scipy-1.16.3.dist-info/: RECORD
artifacts/lambda-build/wheel-0.47.0.dist-info/: RECORD
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _schema.yml  recommendation_coverage.sql  session_funnel.sql
dbt/models/staging/: _schema.yml  _sources.yml  stg_enriched_events.sql
infra/: backend.tf  dynamodb.tf  iam.tf  kinesis.tf  lambda.tf  monitoring.tf  outputs.tf  redshift.tf  variables.tf
scripts/: build_lambda_zip.sh  run_local_demo.py  train_ranker.py
src/pulsecart/: __init__.py  config.py
src/pulsecart/enricher/: feature_lookup.py  scorer.py  session_state.py
src/pulsecart/fakes/: __init__.py  fake_kinesis.py
src/pulsecart/observability/: __init__.py  metrics.py
src/pulsecart/producer/: api.py  kinesis_client.py
src/pulsecart/recommender_api/: __init__.py  app.py
src/pulsecart/warehouse/: redshift_streaming.sql  warehouse.py
tests/: conftest.py  test_e2e_offline.py  test_enricher.py  test_fakes.py  test_observability.py  test_producer.py  test_recommender_api.py  test_schemas.py  test_warehouse.py
(+10 files in other folders)
