[project]
name = "pulsecart"
version = "0.1.0"
description = "Real-time e-commerce clickstream personalization on AWS (Kinesis, Lambda, DynamoDB, SageMaker, Redshift)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "boto3>=1.34",
    "duckdb>=1.0",
    "lightgbm>=4.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "python-json-logger>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "moto[dynamodb,kinesis]>=5.0",
]
dbt = [
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "dbt-redshift>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsecart"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["artifacts", "dbt/target", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
